--- a/src/main/resources/teampixl/com/pixlpos/fxml/adminconsole/dynamics/homedynamics/notesdynamic.fxml
+++ b/src/main/resources/teampixl/com/pixlpos/fxml/adminconsole/dynamics/homedynamics/notesdynamic.fxml
@@ -24,7 +24,7 @@
         </AnchorPane>
         <AnchorPane layoutX="410.0" layoutY="10.0" maxHeight="50.0" maxWidth="60.0" prefHeight="50.0" prefWidth="60.0">
             <children>
-                <Button id="removenotebutton" fx:id="removenotebutton" layoutX="10.0" layoutY="15.0" maxHeight="10.0" maxWidth="10.0" minHeight="20.0" minWidth="20.0" mnemonicParsing="false" prefHeight="10.0" prefWidth="10.0" styleClass="notes-remove" text="+" />
+                <Button id="removenotebutton" fx:id="removenotebutton" layoutX="10.0" layoutY="15.0" maxHeight="10.0" maxWidth="10.0" minHeight="20.0" minWidth="20.0" mnemonicParsing="false" prefHeight="10.0" prefWidth="10.0" styleClass="notes-remove" text="-" />
             </children>
         </AnchorPane>
     </children>
