--- a/src/main/resources/teampixl/com/pixlpos/fxml/adminconsole/Analytics/AdminAnalytics.fxml
+++ b/src/main/resources/teampixl/com/pixlpos/fxml/adminconsole/Analytics/AdminAnalytics.fxml
@@ -71,7 +71,7 @@
         </HBox>
     </top>
     <left>
-        <AnchorPane prefWidth="210.0" style="-fx-background-color: white;" BorderPane.alignment="CENTER">
+        <AnchorPane prefWidth="210.0" styleClass="side-container" BorderPane.alignment="CENTER">
             <children>
                 <AnchorPane layoutY="-5.0" prefHeight="190.0" prefWidth="210.0" AnchorPane.topAnchor="0.0">
                     <children>
@@ -166,7 +166,7 @@
         </AnchorPane>
     </left>
     <right>
-        <AnchorPane prefWidth="380.0" style="-fx-background-color: #f5f5f5;" BorderPane.alignment="CENTER">
+        <AnchorPane prefWidth="380.0" styleClass="background" BorderPane.alignment="CENTER">
             <padding>
                 <Insets bottom="20.0" left="10.0" right="20.0" top="20.0" />
             </padding>
@@ -204,7 +204,7 @@
         <AnchorPane maxHeight="0.0" maxWidth="0.0" prefHeight="0.0" prefWidth="0.0" BorderPane.alignment="CENTER" />
     </bottom>
     <center>
-        <AnchorPane style="-fx-background-color: #f5f5f5;" BorderPane.alignment="TOP_LEFT">
+        <AnchorPane styleClass="background" BorderPane.alignment="TOP_LEFT">
             <padding>
                 <Insets bottom="10.0" left="20.0" right="10.0" top="10.0" />
             </padding>
@@ -219,7 +219,7 @@
                         </HBox>
                     </bottom>
                <center>
-                      <ScatterChart fx:id="chart" prefHeight="400" prefWidth="600" style="-fx-background-color: white; -fx-background-radius: 10;" BorderPane.alignment="CENTER">
+                      <ScatterChart fx:id="chart" prefHeight="400" prefWidth="600" styleClass="analytics-graph" BorderPane.alignment="CENTER">
                           <xAxis>
                               <NumberAxis label="Hour of the Day" fx:id="xAxis" />
                           </xAxis>
