--- a/src/main/resources/teampixl/com/pixlpos/fxml/adminconsole/Home/AdminHome.fxml
+++ b/src/main/resources/teampixl/com/pixlpos/fxml/adminconsole/Home/AdminHome.fxml
@@ -165,13 +165,13 @@
       </AnchorPane>
    </left>
    <right>
-      <AnchorPane style="-fx-background-color: #f5f5f5;" BorderPane.alignment="CENTER" />
+      <AnchorPane styleClass="background" BorderPane.alignment="CENTER" />
    </right>
    <bottom>
       <AnchorPane maxHeight="0.0" maxWidth="0.0" prefHeight="0.0" prefWidth="0.0" BorderPane.alignment="CENTER" />
    </bottom>
    <center>
-      <AnchorPane style="-fx-background-color: #f5f5f5;" BorderPane.alignment="TOP_LEFT">
+      <AnchorPane styleClass="background" BorderPane.alignment="TOP_LEFT">
          <padding>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
          </padding>
