--- a/src/main/resources/teampixl/com/pixlpos/fxml/adminconsole/Menu/AdminMenu.fxml
+++ b/src/main/resources/teampixl/com/pixlpos/fxml/adminconsole/Menu/AdminMenu.fxml
@@ -72,7 +72,7 @@
         </HBox>
     </top>
     <left>
-        <AnchorPane prefWidth="210.0" style="-fx-background-color: white;" BorderPane.alignment="CENTER">
+        <AnchorPane prefWidth="210.0" styleClass="side-container" BorderPane.alignment="CENTER">
             <children>
                 <AnchorPane layoutY="-5.0" prefHeight="190.0" prefWidth="210.0" AnchorPane.topAnchor="0.0">
                     <children>
@@ -167,12 +167,12 @@
         </AnchorPane>
     </left>
     <right>
-        <AnchorPane prefWidth="380.0" style="-fx-background-color: #f5f5f5;" BorderPane.alignment="CENTER">
+        <AnchorPane prefWidth="380.0" styleClass="background" BorderPane.alignment="CENTER">
             <padding>
                 <Insets bottom="20.0" left="10.0" right="20.0" top="20.0" />
             </padding>
          <children>
-            <BorderPane prefHeight="654.4" prefWidth="700.0" style="-fx-background-color: white; -fx-background-radius: 10;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+            <BorderPane prefHeight="654.4" prefWidth="700.0" styleClass="manage-menu-container" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                <center>
                         <VBox prefHeight="200.0" prefWidth="100.0" spacing="10.0" styleClass="manage-menu-container" BorderPane.alignment="CENTER">
                      <children>
