--- a/src/main/resources/teampixl/com/pixlpos/fxml/style.css
+++ b/src/main/resources/teampixl/com/pixlpos/fxml/style.css
@@ -303,15 +303,20 @@
     -fx-font-family: "Arial", sans-serif;
 }
 
+.widget-name-style{
+    -fx-text-fill: black;
+    -fx-font-size: 16px;
+    -fx-font-family: "Arial", sans-serif;
+}
 
 .notes-labeltext{
     -fx-text-fill: #black;
-    -fx-font-weight: 700;
+    /*-fx-font-weight: 700;*/
 }
 
 .stockalert-labeltext{
     -fx-text-fill: #black;
-    -fx-font-weight: 700;
+    /*-fx-font-weight: 700;*/
 }
 
 .stockalert-level-no{
@@ -350,12 +355,12 @@
 
 .userlog-labeltext{
     -fx-text-fill: #black;
-    -fx-font-weight: 700;
+    /*-fx-font-weight: 700;*/
 }
 
 .topseller-labeltext{
     -fx-text-fill: #black;
-    -fx-font-weight: 700;
+    /*-fx-font-weight: 700;*/
 }
 
 .database-label {
