--- a/src/main/resources/teampixl/com/pixlpos/fxml/adminconsole/Home/AdminHome.fxml
+++ b/src/main/resources/teampixl/com/pixlpos/fxml/adminconsole/Home/AdminHome.fxml
@@ -178,15 +178,18 @@
          <children>
             <FlowPane hgap="10.0" prefHeight="655.0" prefWidth="1070.0" prefWrapLength="1.0E7" vgap="20.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                <children>
-                  <VBox minHeight="300.0" minWidth="589.0">
+                  <VBox maxHeight="295.0" minHeight="295.0" minWidth="589.0">
                      <children>
                         <Label styleClass="widget-name-style" text="Notes">
                            <font>
                               <Font size="18.0" />
-                           </font></Label>
+                           </font>
+                           <padding>
+                              <Insets bottom="5.0" />
+                           </padding></Label>
                         <VBox styleClass="widget-container" VBox.vgrow="ALWAYS">
                            <children>
-                              <HBox prefHeight="50.0">
+                              <HBox alignment="CENTER" prefHeight="45.0">
                                  <children>
                                     <AnchorPane prefHeight="50.0" prefWidth="100.0">
                                        <children>
@@ -210,17 +213,20 @@
                                     </AnchorPane>
                                  </children></HBox>
                               <HBox prefHeight="100.0" prefWidth="200.0" styleClass="widget-line" />
-                              <ListView id="noteslistview" fx:id="noteslistview" prefHeight="200.0" styleClass="list-pane" VBox.vgrow="ALWAYS" />
+                              <ListView id="noteslistview" fx:id="noteslistview" prefHeight="0.0" prefWidth="587.0" styleClass="list-pane" VBox.vgrow="ALWAYS" />
                            </children>
                         </VBox>
                      </children>
                   </VBox>
-                  <VBox minHeight="300.0" minWidth="427.0">
+                  <VBox maxHeight="295.0" minHeight="295.0" minWidth="427.0">
                      <children>
-                        <Label styleClass="widget-name-style" text="Stock" />
+                        <Label styleClass="widget-name-style" text="Stock">
+                           <padding>
+                              <Insets bottom="5.0" />
+                           </padding></Label>
                         <VBox styleClass="widget-container" VBox.vgrow="ALWAYS">
                            <children>
-                              <HBox prefHeight="50.0">
+                              <HBox prefHeight="45.0">
                                  <children>
                                     <AnchorPane prefHeight="50.0" HBox.hgrow="ALWAYS">
                                        <children>
@@ -244,12 +250,15 @@
                         </VBox>
                      </children>
                   </VBox>
-                  <VBox layoutX="610.0" layoutY="10.0" minHeight="300.0" minWidth="450.0">
+                  <VBox layoutX="610.0" layoutY="10.0" maxHeight="295.0" minHeight="295.0" minWidth="450.0">
                      <children>
-                        <Label styleClass="widget-name-style" text="User Log" />
+                        <Label styleClass="widget-name-style" text="User Log">
+                           <padding>
+                              <Insets bottom="5.0" />
+                           </padding></Label>
                         <VBox styleClass="widget-container" VBox.vgrow="ALWAYS">
                            <children>
-                              <HBox prefHeight="50.0">
+                              <HBox prefHeight="45.0">
                                  <children>
                                     <AnchorPane prefHeight="50.0" prefWidth="100.0">
                                        <children>
@@ -278,9 +287,12 @@
                         </VBox>
                      </children>
                   </VBox>
-                  <VBox layoutX="20.0" layoutY="340.0" minHeight="300.0" minWidth="254.0">
+                  <VBox layoutX="20.0" layoutY="340.0" maxHeight="295.0" minHeight="295.0" minWidth="254.0">
                      <children>
-                        <Label styleClass="widget-name-style" text="TOP 5 Sellers" />
+                        <Label styleClass="widget-name-style" text="TOP 5 Sellers">
+                           <padding>
+                              <Insets bottom="5.0" />
+                           </padding></Label>
                         <VBox styleClass="widget-container" VBox.vgrow="ALWAYS">
                            <children>
                               <ListView fx:id="topsellerslistview" prefHeight="281.0" prefWidth="249.0" styleClass="list-pane" VBox.vgrow="ALWAYS" />
@@ -288,9 +300,12 @@
                         </VBox>
                      </children>
                   </VBox>
-                  <VBox layoutX="450.0" layoutY="340.0" minHeight="300.0" minWidth="300.0">
+                  <VBox layoutX="450.0" layoutY="340.0" maxHeight="295.0" minHeight="295.0" minWidth="300.0">
                      <children>
-                        <Label styleClass="widget-name-style" text="Sales" />
+                        <Label styleClass="widget-name-style" text="Sales">
+                           <padding>
+                              <Insets bottom="5.0" />
+                           </padding></Label>
                         <VBox alignment="CENTER" prefHeight="200.0" spacing="20.0" styleClass="widget-container" VBox.vgrow="ALWAYS">
                            <children>
                               <PieChart fx:id="piechart" prefHeight="222.0" prefWidth="300.0" />
