--- a/src/main/resources/teampixl/com/pixlpos/fxml/adminconsole/Menu/AdminMenu.fxml
+++ b/src/main/resources/teampixl/com/pixlpos/fxml/adminconsole/Menu/AdminMenu.fxml
@@ -17,7 +17,6 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
 
 <BorderPane prefHeight="720.0" prefWidth="1280.0" stylesheets="@../../style.css" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="teampixl.com.pixlpos.controllers.adminconsole.AdminScreenMenuController">
     <top>
@@ -260,11 +259,16 @@
                         </AnchorPane>
                         <AnchorPane layoutX="210.0" layoutY="10.0" HBox.hgrow="ALWAYS">
                            <children>
-                              <Label alignment="CENTER" prefHeight="50.0" prefWidth="175.0" styleClass="database-label" text="Dietary" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                              <Label alignment="CENTER" prefHeight="50.4" prefWidth="156.0" styleClass="database-label" text="Dietary" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
                            </children>
                         </AnchorPane>
-                        <AnchorPane layoutX="488.0" layoutY="10.0" maxWidth="50.0" minWidth="50.0" HBox.hgrow="ALWAYS" />
-                        <AnchorPane layoutX="520.0" layoutY="10.0" maxWidth="50.0" minWidth="50.0" HBox.hgrow="ALWAYS" />
+                        <AnchorPane layoutX="488.0" layoutY="10.0" maxWidth="100.0" minWidth="100.0" HBox.hgrow="ALWAYS">
+                           <children>
+                              <Label alignment="CENTER" prefHeight="50.4" prefWidth="100.0" styleClass="database-label" text="Action" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                 <padding>
+                                    <Insets right="20.0" />
+                                 </padding></Label>
+                           </children></AnchorPane>
                      </children>
                   </HBox>
                   <ListView fx:id="menuitemlist" styleClass="list-pane" VBox.vgrow="ALWAYS" />
