--- a/src/main/resources/teampixl/com/pixlpos/fxml/adminconsole/Stock/AdminStock.fxml
+++ b/src/main/resources/teampixl/com/pixlpos/fxml/adminconsole/Stock/AdminStock.fxml
@@ -16,7 +16,6 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
 
 <BorderPane prefHeight="720.0" prefWidth="1280.0" stylesheets="@../../style.css" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="teampixl.com.pixlpos.controllers.adminconsole.AdminScreenStockController">
     <top>
@@ -254,12 +253,18 @@
                                 </AnchorPane>
                                 <AnchorPane layoutX="501.0" layoutY="10.0" HBox.hgrow="ALWAYS">
                                     <children>
-                                        <Label alignment="CENTER" prefHeight="50.0" prefWidth="93.0" styleClass="database-label" text="Updated" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                                        <Label alignment="CENTER" prefHeight="50.0" prefWidth="93.0" styleClass="database-label" text="Updated" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                 <padding>
+                                    <Insets right="10.0" />
+                                 </padding></Label>
                                     </children>
                                 </AnchorPane>
                                 <AnchorPane layoutX="386.0" layoutY="10.0" HBox.hgrow="ALWAYS">
                                     <children>
-                                        <Label alignment="CENTER" prefHeight="50.0" prefWidth="112.0" styleClass="database-label" text="Stock Status" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                                        <Label alignment="CENTER" prefHeight="50.0" prefWidth="112.0" styleClass="database-label" text="Stock Status" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                 <padding>
+                                    <Insets left="15.0" />
+                                 </padding></Label>
                                     </children>
                                 </AnchorPane>
                                 <AnchorPane layoutX="530.0" layoutY="10.0" HBox.hgrow="ALWAYS">
