--- a/src/main/resources/teampixl/com/pixlpos/fxml/adminconsole/dynamics/stockdynamic.fxml
+++ b/src/main/resources/teampixl/com/pixlpos/fxml/adminconsole/dynamics/stockdynamic.fxml
@@ -17,23 +17,29 @@
         </AnchorPane>
         <AnchorPane layoutX="452.0" layoutY="10.0" HBox.hgrow="ALWAYS">
             <children>
-                <Label id="qtyfield" fx:id="qtyfield" alignment="CENTER" prefHeight="70.4" prefWidth="80.8" text="Qty" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                <Label id="qtyfield" fx:id="qtyfield" alignment="CENTER" prefHeight="70.4" prefWidth="80.8" text="Qty" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+               <padding>
+                  <Insets right="15.0" />
+               </padding></Label>
             </children>
         </AnchorPane>
         <AnchorPane layoutX="501.0" layoutY="10.0" HBox.hgrow="ALWAYS">
             <children>
-                <Label id="lastupfield" fx:id="lastupfield" alignment="CENTER" prefHeight="70.4" prefWidth="128.0" text="Last Updated" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                <Label id="lastupfield" fx:id="lastupfield" alignment="CENTER" prefHeight="70.4" prefWidth="128.0" text="Last Updated" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+               <padding>
+                  <Insets right="15.0" />
+               </padding></Label>
             </children>
         </AnchorPane>
         <AnchorPane layoutX="386.0" layoutY="10.0" HBox.hgrow="ALWAYS">
             <children>
-                  <Label id="stocklvlfield" fx:id="stocklvlfield" alignment="CENTER" prefHeight="70.4" prefWidth="71.2" styleClass="stockalert-level-low" text="LOW" textFill="WHITE" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                  <Label id="stocklvlfield" fx:id="stocklvlfield" alignment="CENTER" prefHeight="70.0" prefWidth="80.0" styleClass="stockalert-level-low" text="LOW" textFill="WHITE" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
             </children>
          <HBox.margin>
             <Insets />
          </HBox.margin>
          <padding>
-            <Insets bottom="20.0" top="20.0" />
+            <Insets bottom="20.0" right="10.0" top="20.0" />
          </padding>
         </AnchorPane>
         <AnchorPane layoutX="530.0" layoutY="10.0" HBox.hgrow="ALWAYS">
@@ -41,10 +47,10 @@
                 <Label id="orderstatfield" fx:id="orderstatfield" alignment="CENTER" layoutX="13.0" layoutY="20.0" prefHeight="70.4" prefWidth="124.0" styleClass="stockalert-status-on" text="Order Status" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
          </children>
          <padding>
-            <Insets bottom="20.0" left="10.0" right="10.0" top="20.0" />
+            <Insets bottom="20.0" left="10.0" right="15.0" top="20.0" />
          </padding>
         </AnchorPane>
-        <AnchorPane layoutX="108.0" layoutY="10.0" maxWidth="50.0" minWidth="50.0" HBox.hgrow="ALWAYS">
+        <AnchorPane layoutX="108.0" layoutY="10.0" maxWidth="30.0" minWidth="30.0" HBox.hgrow="ALWAYS">
          <children>
                 <Button id="editbutton" fx:id="editbutton" contentDisplay="GRAPHIC_ONLY" mnemonicParsing="false" prefHeight="70.4" prefWidth="50.4" style="-fx-background-color: transparent;" text="Button" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                     <graphic>
@@ -59,7 +65,7 @@
         </AnchorPane>
         <AnchorPane layoutX="488.0" layoutY="10.0" maxWidth="50.0" minWidth="50.0" HBox.hgrow="ALWAYS">
          <children>
-                <Button id="removebutton" fx:id="removebutton" contentDisplay="GRAPHIC_ONLY" mnemonicParsing="false" prefHeight="70.4" prefWidth="50.4" style="-fx-background-color: transparent;" text="Button" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                <Button id="removebutton" fx:id="removebutton" contentDisplay="GRAPHIC_ONLY" mnemonicParsing="false" style="-fx-background-color: transparent;" text="Button" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                     <graphic>
                         <ImageView fitHeight="22.0" fitWidth="22.0" pickOnBounds="true" preserveRatio="true">
                             <image>
@@ -67,6 +73,9 @@
                             </image>
                         </ImageView>
                     </graphic>
+               <padding>
+                  <Insets right="5.0" />
+               </padding>
                 </Button>
          </children>
         </AnchorPane>
