fix(): changed font sizes and layout

--- a/src/main/resources/teampixl/com/pixlpos/fxml/style.css
+++ b/src/main/resources/teampixl/com/pixlpos/fxml/style.css
@@ -171,9 +171,9 @@
 .tab {
     -fx-background-color: white;
     /*-fx-pref-width: 170;*/
-    -fx-pref-height: 50;
+    -fx-pref-height: 40;
     -fx-text-alignment: center;
-    -fx-font-size: 20px;
+    -fx-font-size: 16px;
     -fx-border-radius: 10 10 10 10;
     -fx-focus-color: transparent;
     -fx-faint-focus-color: transparent;
@@ -372,7 +372,7 @@
 
 .order-label {
     -fx-text-fill: #000000;
-    -fx-font-size: 20px;
+    -fx-font-size: 18px;
     -fx-font-family: "Arial", sans-serif;
 }
 
@@ -384,14 +384,14 @@
 
 .customers-label, .table-label {
     -fx-text-fill: #000000;
-    -fx-font-size: 15px;
-    -fx-font-family: "Open Sans";
+    -fx-font-size: 14px;
+    -fx-font-family: "Arial", sans-serif;
 }
 
 .amount-label {
-    -fx-text-fill: #0095FF;
-    -fx-font-size: 20px;
-    -fx-font-family: "Open Sans";
+    -fx-text-fill: #4A85F6;
+    -fx-font-size: 15px;
+    -fx-font-family: "Arial", sans-serif;
 }
 
 .buttonprice-label {
@@ -455,7 +455,7 @@
 .submit-button-waiter {
     -fx-background-color: #A5CC72;
     -fx-text-fill: white;
-    -fx-font-size: 13px;
+    -fx-font-size: 14px;
     -fx-cursor: hand;
     -fx-background-radius: 5;
     -fx-effect: dropshadow(gaussian, rgba(0, 0, 0, 0.2), 10, 0, 0, 2);
@@ -464,13 +464,14 @@
 .customize-button, .item-correct, .filter-button{
     -fx-background-color: #4A85F6;
     -fx-text-fill: white;
+    -fx-font-size: 14px;
     -fx-background-radius: 5;
 }
 
 .restart-button, .voiditem-button {
     -fx-background-color: #dc4242;
     -fx-text-fill: white;
-    -fx-font-size: 13px;
+    -fx-font-size: 15px;
     -fx-cursor: hand;
     -fx-background-radius: 5;
     -fx-effect: dropshadow(gaussian, rgba(0, 0, 0, 0.2), 10, 0, 0, 2);
@@ -480,7 +481,7 @@
     -fx-background-color: #EFF4FA;
     -fx-text-fill: black;
     -fx-font-weight: bold;
-    -fx-font-size: 20px;
+    -fx-font-size: 17px;
     -fx-font-family: "Open Sans";
 }
 
@@ -502,13 +503,13 @@
 
 
 .combo-box-base .text{
-    -fx-fill: #0095FF;
-    -fx-font-size: 15px;
-    -fx-font-family: "Open Sans";
+    -fx-fill: #4A85F6;
+    -fx-font-size: 14px;
+    -fx-font-family: "Arial", sans-serif;
 }
 
 .combo-box{
-    -fx-text-fill: #0095FF;
+    -fx-text-fill: #4A85F6;
     -fx-font-size: 15px;
     -fx-font-family: "Arial", sans-serif;
     -fx-background-color: transparent;
