--- a/src/main/resources/teampixl/com/pixlpos/fxml/waiterconsole/WaiterStage.fxml
+++ b/src/main/resources/teampixl/com/pixlpos/fxml/waiterconsole/WaiterStage.fxml
@@ -38,16 +38,19 @@
                                         <Label fx:id="ordernumber" styleClass="order-number" text="0000000" />
                                     </children>
                                     <padding>
-                                        <Insets right="10.0" />
+                                        <Insets bottom="5.0" right="10.0" top="5.0" />
                                     </padding>
+                           <VBox.margin>
+                              <Insets />
+                           </VBox.margin>
                                 </HBox>
-                                <HBox alignment="CENTER_LEFT" prefHeight="60.0" styleClass="order-highlevel-container">
+                                <HBox alignment="CENTER_LEFT" prefHeight="50.0" styleClass="order-highlevel-container">
                                     <children>
-                                        <HBox alignment="CENTER">
+                                        <HBox alignment="CENTER" HBox.hgrow="ALWAYS">
                                             <children>
                                                 <Label styleClass="customers-label" text="Type:">
                                                     <graphic>
-                                                        <ImageView fitHeight="150.0" fitWidth="22.0" pickOnBounds="true" preserveRatio="true">
+                                                        <ImageView fitHeight="150.0" fitWidth="18.0" pickOnBounds="true" preserveRatio="true">
                                                             <image>
                                                                 <Image url="@../../images/waitericons/user_plus_icon.png" />
                                                             </image>
@@ -57,13 +60,13 @@
                                                 <ComboBox fx:id="ordertype" promptText="00" />
                                             </children>
                                         </HBox>
-                                        <HBox alignment="CENTER">
+                                        <HBox alignment="CENTER" HBox.hgrow="ALWAYS">
                                             <children>
                                                 <Label styleClass="customers-label" text="Customers:">
                                                     <graphic>
-                                                        <ImageView fitHeight="150.0" fitWidth="22.0" pickOnBounds="true" preserveRatio="true">
+                                                        <ImageView fitHeight="150.0" fitWidth="18.0" pickOnBounds="true" preserveRatio="true">
                                                             <image>
-                                                                <Image url="@../../images/waitericons/user_plus_icon.png" />
+                                                                <Image url="@../../images/waitericons/users_group_icon.png" />
                                                             </image>
                                                         </ImageView>
                                                     </graphic>
@@ -71,11 +74,11 @@
                                                 <ComboBox fx:id="customernumber" prefWidth="50.0" promptText="00" styleClass="combo-box" />
                                             </children>
                                         </HBox>
-                                        <HBox alignment="CENTER">
+                                        <HBox alignment="CENTER" HBox.hgrow="ALWAYS">
                                             <children>
                                                 <Label styleClass="table-label" text="Table:">
                                                     <graphic>
-                                                        <ImageView fitHeight="22.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
+                                                        <ImageView fitHeight="22.0" fitWidth="18.0" pickOnBounds="true" preserveRatio="true">
                                                             <image>
                                                                 <Image url="@../../images/waitericons/hash_icon.png" />
                                                             </image>
@@ -94,23 +97,15 @@
                                     </padding>
                                 </HBox>
                                 <ListView fx:id="orderitemslistview" prefHeight="200.0" prefWidth="200.0" styleClass="list-pane-waiter" VBox.vgrow="ALWAYS" />
-                                <HBox alignment="CENTER" spacing="10.0">
+                                <HBox alignment="CENTER" prefHeight="40.0" spacing="10.0" styleClass="order-highlevel-container">
                                     <children>
-                                        <HBox alignment="CENTER" layoutX="252.0" layoutY="10.0" spacing="10.0">
+                                        <HBox alignment="CENTER" layoutX="252.0" layoutY="10.0" spacing="10.0" HBox.hgrow="ALWAYS">
                                             <children>
-                                                <Label styleClass="customers-label" text="Price:">
-                                                    <graphic>
-                                                        <ImageView fitHeight="150.0" fitWidth="22.0" pickOnBounds="true" preserveRatio="true">
-                                                            <image>
-                                                                <Image url="@../../images/waitericons/8666589_dollar_sign_icon.png" />
-                                                            </image>
-                                                        </ImageView>
-                                                    </graphic>
-                                                </Label>
+                                                <Label styleClass="customers-label" text="Price:" />
                                                 <Label fx:id="totalprice" styleClass="amount-label" text="00" />
                                             </children>
                                         </HBox>
-                                        <HBox alignment="CENTER">
+                                        <HBox alignment="CENTER" HBox.hgrow="ALWAYS">
                                             <children>
                                                 <Label styleClass="customers-label" text="Paid:" />
                                                 <ComboBox fx:id="paymentstatus" promptText="00" />
@@ -121,19 +116,19 @@
                             </children></VBox>
                     </center>
                     <bottom>
-                        <HBox alignment="CENTER" prefWidth="200.0" spacing="10.0" BorderPane.alignment="CENTER">
+                        <HBox alignment="CENTER" spacing="15.0" BorderPane.alignment="CENTER">
                             <children>
-                                <Button fx:id="sendorderbutton" mnemonicParsing="false" onAction="#onSendOrderButtonClick" prefHeight="120.0" prefWidth="120.0" styleClass="submit-button-waiter" text="Send Order" />
+                                <Button fx:id="sendorderbutton" mnemonicParsing="false" onAction="#onSendOrderButtonClick" prefHeight="90.0" prefWidth="130.0" styleClass="submit-button-waiter" text="Send Order" />
                                 <VBox spacing="10.0">
                                     <children>
-                                        <Button fx:id="customizebutton" mnemonicParsing="false" onAction="#onCustomizeButtonClick" prefHeight="55.0" prefWidth="170.0" styleClass="customize-button" text="Customize" />
-                                        <Button fx:id="itemcorrectbutton" mnemonicParsing="false" onAction="#onItemCorrectButtonClick" prefHeight="55.0" prefWidth="170.0" styleClass="item-correct" text="Item Correct" />
+                                        <Button fx:id="customizebutton" mnemonicParsing="false" onAction="#onCustomizeButtonClick" prefHeight="40.0" prefWidth="160.0" styleClass="customize-button" text="Customise" />
+                                        <Button fx:id="itemcorrectbutton" mnemonicParsing="false" onAction="#onItemCorrectButtonClick" prefHeight="40.0" prefWidth="160.0" styleClass="item-correct" text="Item Correct" />
                                     </children>
                                 </VBox>
                                 <VBox layoutX="210.0" layoutY="10.0" spacing="10.0">
                                     <children>
-                                        <Button fx:id="voiditembutton" mnemonicParsing="false" onAction="#onVoidItemButtonClick" prefHeight="55.0" prefWidth="170.0" styleClass="voiditem-button" text="Void Item" />
-                                        <Button fx:id="restartbutton" mnemonicParsing="false" onAction="#onRestartButtonClick" prefHeight="55.0" prefWidth="170.0" styleClass="restart-button" text="Restart" />
+                                        <Button fx:id="voiditembutton" mnemonicParsing="false" onAction="#onVoidItemButtonClick" prefHeight="40.0" prefWidth="160.0" styleClass="voiditem-button" text="Void Item" />
+                                        <Button fx:id="restartbutton" mnemonicParsing="false" onAction="#onRestartButtonClick" prefHeight="40.0" prefWidth="160.0" styleClass="restart-button" text="Restart" />
                                     </children>
                                 </VBox>
                             </children>
@@ -145,7 +140,7 @@
                 </BorderPane>
             </children>
             <padding>
-                <Insets bottom="20.0" left="10.0" right="10.0" top="10.0" />
+                <Insets bottom="20.0" left="20.0" right="10.0" top="20.0" />
             </padding></AnchorPane>
     </left>
     <right>
@@ -155,9 +150,9 @@
         <AnchorPane maxHeight="0.0" maxWidth="0.0" prefHeight="0.0" prefWidth="0.0" BorderPane.alignment="CENTER" />
     </bottom>
     <center>
-        <AnchorPane styleClass="root-anchor" BorderPane.alignment="TOP_LEFT">
+        <AnchorPane prefWidth="856.0" styleClass="root-anchor" BorderPane.alignment="TOP_LEFT">
             <padding>
-                <Insets bottom="10.0" left="10.0" right="10.0" />
+                <Insets bottom="10.0" right="10.0" />
             </padding>
             <children>
                 <TabPane fx:id="itemtab" prefHeight="670.4" prefWidth="769.6" snapToPixel="false" styleClass="tab-pane" tabClosingPolicy="UNAVAILABLE" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
